# hb-rate-oracle

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .secrets.baseline  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-please.yml  security.yml
rate_oracle/: __init__.py
rate_oracle/core/: __init__.py  rate_oracle.py  rate_source_base.py  utils.py
rate_oracle/hb_compat/: __init__.py
rate_oracle/sources/: __init__.py  coin_cap_source.py  coin_gecko_source.py
tests/unit/: test_rate_oracle.py  test_rate_source_base.py  test_utils.py
tests/unit/sources/: test_coin_cap_source.py  test_coin_gecko_source.py
