[project]
name = "hb-rate-oracle"
dynamic = ["version"]
description = "A modular rate oracle for cryptocurrency price conversion and rate sourcing"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "aiohttp>=3.8.0",
    "cachetools>=7.0.5",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "rate_oracle/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["rate_oracle"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
aiohttp = ">=3.8.0"
cachetools = ">=5.0.0"
pydantic = ">=2"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.11.0"
pytest-timeout = ">=2.1.0"
pytest-xdist = "*"
ruff = ">=0.1.6"
mypy = ">=1.5.1"

[tool.pixi.feature.ci.dependencies]
ruff = ">=0.1.6"
mypy = ">=1.5.1"
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
pytest-timeout = ">=2.1.0"
bandit = ">=1.8.0"
pre-commit = ">=2.15.0"
types-setuptools = "*"
types-cachetools = "*"

# Python version features
[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.quality-extended.dependencies]
bandit = ">=1.8.0"
pip-audit = "*"
filelock = "*"

[tool.pixi.feature.quality-extended.tasks]
security-scan = "bandit -c pyproject.toml -r rate_oracle/"
safety-check = "pip-audit"

[tool.pixi.feature.quality-ci.dependencies]
python-build = "*"
hatchling = "*"

[tool.pixi.feature.quality-ci.tasks]
build = "python -m build"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
ci = { features = ["ci", "dev"], solve-group = "default" }
py310 = { features = ["py310", "dev"], solve-group = "py310" }
py311 = { features = ["py311", "dev"], solve-group = "py311" }
py312 = { features = ["py312", "dev"], solve-group = "py312" }
quality-extended = { features = ["quality-extended"], solve-group = "default" }
quality-ci = { features = ["quality-ci"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest tests/"
test-unit = "pytest tests/unit/"
lint = "ruff check rate_oracle tests"
format = "ruff format rate_oracle tests"
format-check = "ruff format --check rate_oracle tests"
typecheck = "mypy rate_oracle"
type-check = "mypy rate_oracle"
security = "bandit -c pyproject.toml -r rate_oracle/"
quality = { depends-on = ["lint", "type-check"] }
check = { depends-on = ["format", "lint", "type-check", "test"] }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long - handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["rate_oracle"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "live: marks tests that hit real external APIs (deselect with '-m \"not live\"')",
]
log_cli = true
log_cli_level = "DEBUG"
# Timeout settings (CI-friendly, can be overridden by --timeout flag)
timeout = 300
timeout_method = "thread"
# CI performance optimizations
addopts = "--strict-markers --strict-config"
minversion = "7.0"

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["rate_oracle", "tests"]
omit = [
  "rate_oracle/__about__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B107"]

# Hummingbot sub-package supersession metadata.
# Declares which hummingbot module this sub-package replaces, enabling automated
# compatibility checking and test-skipping in hummingbot CI when this package is installed.
[tool.hummingbot.supersedes]
module = "hummingbot.core.rate_oracle"
import_path = "rate_oracle.hb_compat"
test_paths = ["test/hummingbot/core/rate_oracle"]
exchanges = ["coin_gecko", "coin_cap"]
